# Mailsilo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yaml  pyproject.toml
app/: auth.py  config.py  crypto.py  database.py  main.py
app/api/: accounts.py  auth.py  deps.py  emails.py  folders.py  imports.py  oauth_microsoft.py  settings.py
app/imap/: fetcher.py
app/importers/: eml.py  mbox.py  pst.py
app/models/: __init__.py  account.py  attachment.py  deleted.py  email.py  folder.py  session.py  setting.py  user.py
app/services/: email_service.py  fetch.py
app/static/: mailsilo.css
app/templates/: index.html
attachments/10111/: 373bb68cac60_Appointment1.ics
attachments/10151/: a88a567017e8_image
attachments/10855/: 6dd3408d11bf_image
attachments/11496/: 051f09032905_mailerProvidedImage0
attachments/11497/: d3b31fd7bca1_ra_0_mailerProvidedImage0
attachments/11584/: 1b303ef62c8e_NJHS hours grid 2023-2024.docx
attachments/11627/: b701cad25bc8_Set and Prop Crew.docx
attachments/11842/: 51V77Y~6
attachments/11979/: 51YW1P~U
attachments/12003/: bd3ae481e249_GALA Parent Letter.docx
attachments/12022/: E9D9ZK~3
attachments/12031/: 55d387975022_The Caterpillar.docx
attachments/12053/: 06A2RG~J
attachments/12107/: 1ba7410dbaa7_Tech Crew permission slip.docx
attachments/12197/: 4533d7d4b3e9_Data Chat.docx
attachments/12222/: 689XSJ~K
attachments/12314/: 9fcaf830cee7_Appointment1.ics
attachments/12557/: 9GQ98C~4.DOC
attachments/12568/: 8OTQ43~P.DOC
attachments/12617/: 4YZ6K7~4  (+2 more)
(+236 files in other folders)
