[project]
name = "mailsilo"
version = "0.1.0"
description = "Self-hosted email archiver – fetch, import, read, and search emails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
    "aiofiles>=24.1",
    "email-validator>=2.2",
    "imapclient>=3.0",
    "beautifulsoup4>=4.12",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "redis>=5.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
pst = ["libpff-python>=0.0.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
